Fixed alignment with the social media icons and contact form

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -94,8 +94,8 @@ footer p {
 .contact img{
     width: 40px;
     height: 40px;
-    display: inline-block;
-    vertical-align: bottom;
+    display: inline;
+    vertical-align: middle;
 }
 
 /* styling the text div in the page where the text falls on top of the background image */
@@ -116,12 +116,12 @@ label textarea {
 
 /* align the surname label with the other form labels*/
 .surnameLabel {
-    padding-right: 24px;
+    padding-right: 10px;
 }
 
 /* align the email label with the other form labels*/
 .emailLabel{
-    padding-right: 40px;
+    padding-right: 32px;
 }
 
 /* COVID PAGE STLYING */
